--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <title>Jayden Cowleys Portfolio</title>
     <!--Linking CSS-->
     <link rel="stylesheet" href="./assets/portfolioStylesheet.css">
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
 </head>
 
 <body>
     <header>
         <h1>Jayden Cowleys Portfolio</h1>
     </header>
-    <nav>
+    <nav class="flex-colomn">
         <ul>
             <li>
                 <a href="#about-me"> About Me</a>
@@ -23,28 +23,80 @@
                 <a href="#resume">Resume</a>
             </li>
             <li>
-                <a href="#contact-me"></a>
+                <a href="#contact-me">Contact Me</a>
             </li>
         </ul>
     </nav>
-<div class="main-content">
+<div class="main-content flex-colomn">
     <!-- About Me Section -->
-    <h2 id="about-me">
-        About Me
-    </h2>
-    <!-- Website Development Section -->
-    <h2 id="Website-development">
-        Website Developement
-    </h2>
-    <!-- Resume Section -->
-    <h2 id="resume">
-        Resume
-    </h2>
-    <!-- Contact Me Section -->
-    <h2>
-        Contact Me
-    </h2>
+    <div class="bio flex-colomn">
+        <h2 id="about-me">
+            About Me
+        </h2>
+        <p>
+            My name is Jayden Cowley and this is my portfolio! In this section I'd like to tell you a little about me.
+            Some of my favorite hobbies are camping, playing video games, and spending time with my family. I have a wife
+            and a baby boy. I also love dogs, I've never known a time in my life where I didn't have a furry companion by my side.
+            Currently I have a Pitbull/lab mix who is about 5 years old.
+        </p>
+    </div>
+        <!-- Website Development Section -->
+    <div class="projects">
+        <h2 id="Website-development">
+            Website Developement
+        </h2>
+        <div class="website-bubbles">
+            <div>
+                <a href="">Run Buddy</a>
+            </div>
+            <div>
+                <a href="">Place Holder</a>
+            </div>
+            <div>
+                <a href="">Place Holder</a>
+            </div>
+            <div>
+                <a href="">Place Holder</a>
+            </div>
+            <div>
+                <a href="">Place Holder</a>
+            </div>
+            <div>
+                <a href="">Place Holder</a>
+            </div>
+        </div>
+    </div>
+        <!-- Resume Section -->
+    <div class="experience">
+        <h2 id="resume">
+            Resume
+        </h2>
+    </div>
+    <div class="contact">
+        <!-- Contact Me Section -->
+        <h2 id="contact-me">
+            Contact Me
+        </h2>
+        <h3>
+            Jayden Cowley
+        </h3>
+        <p>
+            I'd be happy to hear from you!
+        </p>
+        <address>
+            <br/>
+            <br/>
+            <br/>
+            P: (801)675-6405 <br/>
+            E: <a href="mailto:jcowley16@gmail.com">Send Me An email</a>
+        </address>
+
+
+    </div>
 </div>
+<footer>
+    Made by Jayden Cowley
+</footer>
   
 
 </body>
