Adding more css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 <div class="main-content flex-colomn">
     <!-- About Me Section -->
-    <div class="bio flex-colomn">
+    <div class="bio content-section">
         <h2 id="about-me">
             About Me
         </h2>
@@ -41,8 +41,8 @@
         </p>
     </div>
         <!-- Website Development Section -->
-    <div class="projects">
-        <h2 id="Website-development">
+    <div class="projects content-section">
+        <h2 id="website-development" class="section-title">
             Website Developement
         </h2>
         <div class="website-bubbles">
@@ -67,14 +67,14 @@
         </div>
     </div>
         <!-- Resume Section -->
-    <div class="experience">
-        <h2 id="resume">
+    <div class="experience content-section">
+        <h2 id="resume" class="section-title">
             Resume
         </h2>
     </div>
-    <div class="contact">
+    <div class="contact content-section">
         <!-- Contact Me Section -->
-        <h2 id="contact-me">
+        <h2 id="contact-me" class="section-title">
             Contact Me
         </h2>
         <h3>
