--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <!--Linking CSS-->
     <link rel="stylesheet" href="./assets/portfolioStylesheet.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
     <header>
         <h1>Jayden Cowleys Portfolio</h1>
     </header>
-    <nav class="flex-colomn">
+    <nav>
         <ul>
             <li>
                 <a href="#about-me"> About Me</a>
@@ -46,8 +47,8 @@
             Website Developement
         </h2>
         <div class="website-bubbles">
-            <div>
-                <a href="">Run Buddy</a>
+            <div id="run-buddy">
+                <a href="https://jaydencowley.github.io/run-buddy/">Run Buddy</a>
             </div>
             <div>
                 <a href="">Place Holder</a>
@@ -95,7 +96,7 @@
     </div>
 </div>
 <footer>
-    Made by Jayden Cowley
+    <h3>Made by Jayden Cowley</h3>
 </footer>
   
 
