--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
         <h1>Jayden Cowleys Portfolio</h1>
     </header>
     <nav>
-        <ul>
-            <li>
-                <a href="#about-me"> About Me</a>
-            </li>
-            <li>
-                <a href="#website-development">Website Developement</a> 
-            </li>
-            <li>
-                <a href="#resume">Resume</a>
-            </li>
-            <li>
-                <a href="#contact-me">Contact Me</a>
-            </li>
-        </ul>
+        <div>
+            <a href="#about-me"> About Me</a>
+        </div>
+        <div>
+            <a href="#website-development">Website Developement</a> 
+        </div>
+        <div>
+            <a href="#resume">Resume</a>
+        </div>
+        <div>
+            <a href="#contact-me">Contact Me</a>
+        </div>
     </nav>
 <div class="main-content flex-colomn">
     <!-- About Me Section -->
@@ -48,7 +46,7 @@
         </h2>
         <div class="website-bubbles">
             <div id="run-buddy">
-                <a href="https://jaydencowley.github.io/run-buddy/">Run Buddy</a>
+                <a href="https://jaydencowley.github.io/run-buddy/" target="_blank">Run Buddy</a>
             </div>
             <div>
                 <a href="">Place Holder</a>
