Adding profile picture

--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
         <h2 id="about-me">
             About Me
         </h2>
+        
         <p>
+            
             My name is Jayden Cowley and this is my portfolio! In this section I'd like to tell you a little about me.
             Some of my favorite hobbies are camping, playing video games, and spending time with my family. I have a wife
             and a baby boy. I also love dogs, I've never known a time in my life where I didn't have a furry companion by my side.
             Currently I have a Pitbull/lab mix who is about 5 years old.
         </p>
+        <img src="./assets/images/O_0NJtkeRT6FcalNGXSXrw.jpg" alt="Jayden and his son Lincoln">
     </div>
         <!-- Website Development Section -->
     <div class="projects content-section">
