Adding hover effects

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <h1>Jayden Cowleys Portfolio</h1>
     </header>
     <nav>
-        <div>
+        <div class="nav-button">
             <a href="#about-me"> About Me</a>
         </div>
-        <div>
+        <div class="nav-button">
             <a href="#website-development">Website Developement</a> 
         </div>
-        <div>
+        <div class="nav-button">
             <a href="#resume">Resume</a>
         </div>
-        <div>
+        <div class="nav-button">
             <a href="#contact-me">Contact Me</a>
         </div>
     </nav>
@@ -48,22 +48,22 @@
             Website Developement
         </h2>
         <div class="website-bubbles">
-            <div id="run-buddy">
+            <div id="run-buddy" class="bubble">
                 <a href="https://jaydencowley.github.io/run-buddy/" target="_blank">Run Buddy</a>
             </div>
-            <div>
+            <div class="bubble">
                 <a href="">Place Holder</a>
             </div>
-            <div>
+            <div class="bubble">
                 <a href="">Place Holder</a>
             </div>
-            <div>
+            <div class="bubble">
                 <a href="">Place Holder</a>
             </div>
-            <div>
+            <div class="bubble">
                 <a href="">Place Holder</a>
             </div>
-            <div>
+            <div class="bubble">
                 <a href="">Place Holder</a>
             </div>
         </div>
