Adding paradise paw

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div id="run-buddy" class="bubble">
                 <a href="https://jaydencowley.github.io/run-buddy/" target="_blank">Run Buddy</a>
             </div>
-            <div class="bubble">
-                <a href="">Place Holder</a>
+            <div id="paradise-paw" class="bubble">
+                <a href="https://jaydencowley.github.io/Paradise-Paw/" target="_blank">Paradise Paw</a>
             </div>
             <div class="bubble">
                 <a href="">Place Holder</a>
