--- a/index.html
+++ b/index.html
@@ -1,104 +1,107 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-<title>Jayden Cowleys Portfolio</title>
+    <title>Jayden Cowleys Portfolio</title>
     <!--Linking CSS-->
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel="stylesheet" href="./assets/portfolioStylesheet.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body class="container">
     <header>
-        <h1>Jayden Cowleys Portfolio</h1>
+        <nav>
+            <ul>
+                <li><strong>Jayden Cowleys Portfolio</strong></li>
+            </ul>
+            <ul>
+                <li class="nav-button">
+                    <a href="#about-me"> About Me</a>
+                </li>
+                <li class="nav-button">
+                    <a href="#website-development">Website Developement</a>
+                </li>
+                <li class="nav-button">
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <div class="nav-button">
-            <a href="#about-me"> About Me</a>
+    <div class="main-content flex-colomn">
+        <!-- About Me Section -->
+        <div class="bio content-section">
+            <h2 id="about-me">
+                About Me
+            </h2>
+
+            <p>
+
+                My name is Jayden Cowley and this is my portfolio! In this section I'd like to tell you a little about
+                me.
+                Some of my favorite hobbies are camping, playing video games, and spending time with my family. I have a
+                wife
+                and a baby boy. I also love dogs, I've never known a time in my life where I didn't have a furry
+                companion by my side.
+                Currently I have a Pitbull/lab mix who is about 5 years old.
+            </p>
+            <img src="./assets/images/O_0NJtkeRT6FcalNGXSXrw.jpg" alt="Jayden and his son Lincoln">
         </div>
-        <div class="nav-button">
-            <a href="#website-development">Website Developement</a> 
-        </div>
-        <div class="nav-button">
-            <a href="#resume">Resume</a>
-        </div>
-        <div class="nav-button">
-            <a href="#contact-me">Contact Me</a>
-        </div>
-    </nav>
-<div class="main-content flex-colomn">
-    <!-- About Me Section -->
-    <div class="bio content-section">
-        <h2 id="about-me">
-            About Me
-        </h2>
-        
-        <p>
-            
-            My name is Jayden Cowley and this is my portfolio! In this section I'd like to tell you a little about me.
-            Some of my favorite hobbies are camping, playing video games, and spending time with my family. I have a wife
-            and a baby boy. I also love dogs, I've never known a time in my life where I didn't have a furry companion by my side.
-            Currently I have a Pitbull/lab mix who is about 5 years old.
-        </p>
-        <img src="./assets/images/O_0NJtkeRT6FcalNGXSXrw.jpg" alt="Jayden and his son Lincoln">
-    </div>
         <!-- Website Development Section -->
-    <div class="projects content-section">
-        <h2 id="website-development" class="section-title">
-            Website Developement
-        </h2>
-        <div class="website-bubbles">
-            <div id="run-buddy" class="bubble">
-                <a href="https://jaydencowley.github.io/run-buddy/" target="_blank">Run Buddy</a>
-            </div>
-            <div id="paradise-paw" class="bubble">
-                <a href="https://jaydencowley.github.io/Paradise-Paw/" target="_blank">Paradise Paw</a>
-            </div>
-            <div class="bubble">
-                <a href="">Place Holder</a>
-            </div>
-            <div class="bubble">
-                <a href="">Place Holder</a>
-            </div>
-            <div class="bubble">
-                <a href="">Place Holder</a>
-            </div>
-            <div class="bubble">
-                <a href="">Place Holder</a>
+        <div class="projects content-section">
+            <h2 id="website-development" class="section-title">
+                Website Developement
+            </h2>
+            <div class="website-bubbles">
+                <div id="run-buddy" class="bubble">
+                    <a href="https://jaydencowley.github.io/run-buddy/" target="_blank">Run Buddy</a>
+                </div>
+                <div id="paradise-paw" class="bubble">
+                    <a href="https://jaydencowley.github.io/Paradise-Paw/" target="_blank">Paradise Paw</a>
+                </div>
+                <div id="Weather-app" class="bubble">
+                    <a href="https://jaydencowley.github.io/weather-api/" target="_blank">Weather App</a>
+                </div>
+                <!-- <div class="bubble">
+                    <a href="">Place Holder</a>
+                </div>
+                <div class="bubble">
+                    <a href="">Place Holder</a>
+                </div>
+                <div class="bubble">
+                    <a href="">Place Holder</a>
+                </div> -->
             </div>
         </div>
-    </div>
-        <!-- Resume Section -->
-    <div class="experience content-section">
-        <h2 id="resume" class="section-title">
-            Resume
-        </h2>
-    </div>
-    <div class="contact content-section">
-        <!-- Contact Me Section -->
-        <h2 id="contact-me" class="section-title">
-            Contact Me
-        </h2>
-        <h3>
-            Jayden Cowley
-        </h3>
-        <p>
-            I'd be happy to hear from you!
-        </p>
-        <address>
-            <br/>
-            <br/>
-            <br/>
-            P: (801)675-6405 <br/>
-            E: <a href="mailto:jcowley16@gmail.com">Send Me An email</a>
-        </address>
+
+        <div class="contact content-section">
+            <!-- Contact Me Section -->
+            <h2 id="contact-me" class="section-title">
+                Contact Me
+            </h2>
+            <h3>
+                Jayden Cowley
+            </h3>
+            <p>
+                I'd be happy to hear from you!
+            </p>
+            <address>
+                3697 West 4150 South<br />
+                West Haven UT<br />
+                84401<br />
+                <br />
+                P: (801)675-6405 <br />
+                E: <a href="mailto:jcowley16@gmail.com">Send Me An email</a><br />
+                <a href="https://github.com/JaydenCowley" target="_blank">Visit my Github</a>
+            </address>
 
 
+        </div>
     </div>
-</div>
-<footer>
-    <h3>Made by Jayden Cowley</h3>
-</footer>
-  
+    <footer>
+        <h3>Made by Jayden Cowley</h3>
+    </footer>
+
 
 </body>
