adding linkedin link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                 <br />
                 P: (801)675-6405 <br />
                 E: <a href="mailto:jcowley16@gmail.com">Send Me An email</a><br />
-                <a href="https://github.com/JaydenCowley" target="_blank">Visit my Github</a>
+                <a href="https://github.com/JaydenCowley" target="_blank">Visit my Github</a> <br />
+                <a href="https://www.linkedin.com/in/jayden-cowley-5b5429230/" target="_blank">linkedin</a>
             </address>
 
 
