added fitness-app to portfolio

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <div id="Weather-app" class="bubble">
                     <a href="https://jaydencowley.github.io/weather-api/" target="_blank">Weather App</a>
                 </div>
-                <!-- <div class="bubble">
-                    <a href="">Place Holder</a>
+                <div id="fitness-tracker" class="bubble">
+                    <a href="https://enigmatic-tor-51827.herokuapp.com/" target="_blank">Fitness Tracker (still in developement)</a>
                 </div>
-                <div class="bubble">
+                <!-- <div class="bubble">
                     <a href="">Place Holder</a>
                 </div>
                 <div class="bubble">
