--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <div id="fitness-tracker" class="bubble">
                     <a href="https://enigmatic-tor-51827.herokuapp.com/" target="_blank">Fitness Tracker (still in developement)</a>
                 </div>
-                <!-- <div class="bubble">
-                    <a href="">Place Holder</a>
+                <div id="nikes-on-my-feet-project" class="bubble">
+                    <a href="https://nikes-on-my-feet-project.herokuapp.com/">nikes-on-my-feet-project</a>
                 </div>
-                <div class="bubble">
+                <!-- <div class="bubble">
                     <a href="">Place Holder</a>
                 </div> -->
             </div>
