--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--Linking CSS-->
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel="stylesheet" href="./assets/portfolioStylesheet.css">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
